Server configuration is migrated from XML to YAML, support of providing of configuration over class path was added. Germlin server became the integral part of the YTDB server. JVM warnings were disabled. JNR version was updated to avoid warnings about Unsafe usage. Support of plugins and server handlers was removed as they relied on the private API. Support of registration of users, modification of YTDB configuration was ported.